style: triming user name in the sidenav

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -10,3 +10,10 @@
 .feed{
   padding-left: calc(50% - 850px/2);
 }
+
+.word-clip {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 100%;
+  overflow: hidden;
+} 
